# opengithub

./: .dockerignore  .env.example  .env.test  .gitignore  AGENTS.md  BUILD_GUIDE.md  CLAUDE.md  Cargo.toml  Dockerfile.api  Dockerfile.migration  Dockerfile.web  Dockerfile.worker  Makefile  README.md  build-progress.txt  docker-compose.dev.yml  docker-compose.test.yml  prd.json  qa-hints.json  qa-report-discussions-001.json  qa-report-prs-005-fresh.json  qa-report-summary.json  qa-report.json
crates/api/: Cargo.toml
crates/api/examples/: dashboard_e2e_seed.rs
crates/api/migrations/: 202605010029_pull_request_diff_review.down.sql  202605010029_pull_request_diff_review.up.sql  202605020030_pull_request_merge_policy.down.sql  202605020030_pull_request_merge_policy.up.sql  202605020031_actions_dashboard.down.sql  202605020031_actions_dashboard.up.sql  202605020032_actions_workflow_detail.down.sql  202605020032_actions_workflow_detail.up.sql  202605020033_actions_run_detail.down.sql  202605020033_actions_run_detail.up.sql  202605020034_actions_job_logs.down.sql  202605020034_actions_job_logs.up.sql  202605020035_actions_job_log_detail.down.sql  202605020035_actions_job_log_detail.up.sql  202605020036_actions_push_triggers.down.sql  202605020036_actions_push_triggers.up.sql  202605020037_search_suggestions.down.sql  202605020037_search_suggestions.up.sql  202605020038_organization_overview.down.sql  202605020038_organization_overview.up.sql  202605020038_user_profiles.down.sql  202605020038_user_profiles.up.sql  202605020039_profile_repository_metadata.down.sql  202605020039_profile_repository_metadata.up.sql  202605020040_organization_profiles.down.sql  202605020040_organization_profiles.up.sql  202605020041_repository_settings.down.sql  202605020041_repository_settings.up.sql  202605030041_owner_packages.down.sql  202605030041_owner_packages.up.sql  202605030041_personal_profile_settings.up.sql  (+167 more)
crates/api/src/: config.rs  (+4 more)
(+920 files in other folders)
