[package]
name = "opengithub-api"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
url.workspace = true
oauth2.workspace = true
tower-sessions.workspace = true
axum-login.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
reqwest.workspace = true
pulldown-cmark.workspace = true
ammonia.workspace = true
regex.workspace = true
dotenvy.workspace = true
